<resources>
    <string name="app_name">berita</string>
    <string name="tittle">BERITA NEWS</string>
    <string name="title1">Tiga Warga Palestina Termasuk Anak Kecil Tewas Terkena Peluru Tentara Israel</string>
    <string name="title2">Tengok Keseruan Pawai Kirab Pemuda di Bangka, dari Pakaian Adat Aceh Hingga Papua</string>
    <string name="title3">Tim SAR Gunakan Medsos Cari Korban Gempa Sulteng</string>
    <string name="lanjutan">Baca Selengkapnya...</string>
</resources>
